objects/Migration_Rule_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Org</label>
        <referenceTo>Settings__c</referenceTo>
        <relationshipLabel>Migration Rule Mappings</relationshipLabel>
        <relationshipName>Migration_Rule_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_ID_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ID Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manuel_Entry_Value__c</fullName>
        <label>Manuel Entry Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Rule__c</fullName>
        <label>Migration Rule</label>
        <referenceTo>Migration_Rule__c</referenceTo>
        <relationshipLabel>Migration Rule Mappings</relationshipLabel>
        <relationshipName>Migration_Rule_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_Type__c</fullName>
        <label>Migration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field From Source</fullName>
                    <default>true</default>
                    <label>Field From Source</label>
                </value>
                <value>
                    <fullName>Manuel Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <formula>IF(ISPICKVAL(Migration_Type__c,&apos;Field From Source&apos;),Migration_Rule__r.Source_Object__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Migration Rule Mapping</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Migration Rule Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Rule Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValueControl</fullName>
        <active>true</active>
        <description>If field from source is selected manual entry cannot contain any value.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(Migration_Type__c, &apos;Field from source&apos;),NOT(ISBLANK(Manuel_Entry_Value__c))),true,false)</errorConditionFormula>
        <errorDisplayField>Manuel_Entry_Value__c</errorDisplayField>
        <errorMessage>When field from source is selected Manual Entry Value cannot contain any input.</errorMessage>
    </validationRules>
</CustomObject>